<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/test_title"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:background="#009688"
        android:gravity="center"
        android:text="@string/qwerty_title"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/testLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30sp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="10sp"
            android:text="00:00"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_to_enter"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="20sp"
            android:paddingBottom="20sp"
            android:text="TextView"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="87dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginTop="15sp"
                android:layout_marginRight="15sp"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/end_of_test_OK"
            android:layout_width="243dp"
            android:layout_height="wrap_content"
            android:onClick="onClickBeginTest"
            android:text="@string/OK" />
    </LinearLayout>
</LinearLayout>