<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.keyboardlayoutcomparison.MainActivity">

    <TextView
        android:id="@+id/main_page_title"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:background="#009688"
        android:gravity="center"
        android:text="@string/main_title"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/main_instruction"
        android:layout_width="match_parent"
        android:layout_height="221dp"
        android:gravity="center"
        android:lineSpacingExtra="8sp"
        android:paddingLeft="8sp"
        android:paddingRight="8sp"
        android:text="@string/main_instructions"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/main_instruction2"
        android:layout_width="match_parent"
        android:layout_height="236dp"
        android:gravity="center"
        android:lineSpacingExtra="4sp"
        android:paddingLeft="5sp"
        android:paddingRight="5sp"
        android:text="@string/main_instructions2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:gravity="bottom|center"
        android:orientation="vertical">

        <Button
            android:id="@+id/firstTest"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="#096159"
            android:onClick="proceed"
            android:text="@string/main_button"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>